--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Taller</string>
+    <string name="app_name">Taller 2: Dagger en librería y aplicación</string>
 </resources>
